--- a/index.html
+++ b/index.html
@@ -7,7 +7,25 @@
     <title>Projeto 4</title>
 </head>
 <body>
+    <header>
+        <h1 id="logo">Projeto</H1>
+        <nav>
+            <ul>
+                <li> <a href="index.html">Home</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Quiz</a></li>
+                <li><a href="#">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <section class="banner">
+        <img id="image" src="" alt="banner">
+    </section>
+
+    <footer>
+        <p>&copy; 2025 - todos os direitos resrvados</p>
+    </footer>
 
     <script src="./src/js/script.js"></script>
 </body>
