Criando o slideshow e estilizando

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/style.css">
     <title>Projeto 4</title>
 </head>
 <body>
@@ -20,7 +20,7 @@
     </header>
 
     <section class="banner">
-        <img id="image" src="" alt="banner">
+        <img id="image" alt="banner">
     </section>
 
     <footer>
