Criando a estrutura HTML do quiz

--- a/src/pages/quiz.html
+++ b/src/pages/quiz.html
@@ -18,5 +18,24 @@
             </ul>
         </nav>
     </header>
+
+    <main id="container-quiz">
+        <div class="quiz">
+            <h1>Aprenda Programação</h1>
+            <section id="container-perguntas">
+                <h2 id="pergunta"></h2>
+                <div id="container-resposta">
+                    <input type="text" id="respostas" placeholder="Digite sua resposta">
+                </div>
+                <button id="proximo">Próxima Pergunta</button>
+                <p id="message"></p>
+            </section>
+            <section id="container-resultado" class="hidden">
+                <h2>Resultado do Quiz</h2>
+                <ul id="lista-resultado"></ul>
+                <button id="inicio-btn"> Iniciar</button>
+            </section>
+        </div>
+    </main>
 </body>
 </html>
