--- a/src/pages/quiz.html
+++ b/src/pages/quiz.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
+
     <title>Quiz</title>
 </head>
 <body>
+
     <header>
-        <h1 id="logo">Projeto</H1>
+        <h1 id="logo">Projeto</h1>
         <nav>
             <ul>
-                <li> <a href="../../index.html">Home</a></li>
+                <li><a href="../../index.html">Home</a></li>
                 <li><a href="./sobre.html">Sobre</a></li>
                 <li><a href="./quiz.html">Quiz</a></li>
                 <li><a href="./contato.html">Contato</a></li>
@@ -24,18 +26,22 @@
             <h1>Aprenda Programação</h1>
             <section id="container-perguntas">
                 <h2 id="pergunta"></h2>
-                <div id="container-resposta">
-                    <input type="text" id="respostas" placeholder="Digite sua resposta">
+                <div id="container-respostas">
+                    <input type="text" id="resposta" placeholder="Digite sua resposta">
                 </div>
                 <button id="proximo">Próxima Pergunta</button>
                 <p id="message"></p>
             </section>
             <section id="container-resultado" class="hidden">
-                <h2>Resultado do Quiz</h2>
+                <h2>Resultado do quiz</h2>
                 <ul id="lista-resultado"></ul>
-                <button id="inicio-btn"> Iniciar</button>
+                <button id="inicio-btn">Reiniciar</button>
             </section>
+
         </div>
+
     </main>
+
+  <script src="../js/quiz.js"></script>  
 </body>
 </html>
