--- a/src/pages/contato.html
+++ b/src/pages/contato.html
@@ -24,26 +24,30 @@
                 <form class="form" id="form">
                     <article class="control">
                         <label for="nome">Nome</label>
-                        <input type="text" id="nome" name="nome">
+                        <input type="text" id="nome" name="nome" required>
+                        <i class="error"><img src="../assets/erro.svg" alt=""></i>
                         <small>Erro</small>
                     </article>
 
                     <article class="control">
                         <label for="email">Email</label>
-                        <input type="text" id="email" name="email">
+                        <input type="email" id="email" name="email">
+                        <i class="error"><img src="../assets/erro.svg" alt=""></i>
                         <small>Erro</small>
                     </article>
 
                     <article class="control">
                         <label for="descricao">Descrição</label>
-                        <textarea type="text" id="descricao" name="descricao"></textarea>
+                        <textarea type="text" id="descricao" name="descricao" required></textarea>
+                        <i class="error"><img src="../assets/erro.svg" alt=""></i>
                         <small>Erro</small>
                     </article>
 
-                    <button type="submit" onclick="Enviar()">Enviar </button>
+                    <button type="submit" onclick="validar()">Enviar </button>
                 </form>
             </div>
         </main>
 
+        <script src="../js/contato.js"></script>
 </body>
 </html>
